samples/_failures_safe/1761610672_8d9062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6390643a.c: In function ‘main’:
./samples/SAFE/__tmp_6390643a.c:145:13: error: expected declaration or statement at end of input
  145 |             }
      |             ^
./samples/SAFE/__tmp_6390643a.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6390643a.c:145:13: error: expected declaration or statement at end of input
